bug fix in aaspot alert and again working on CSS

--- a/EqUiWebUi/App_Code/MyEquiToolkit.cshtml
+++ b/EqUiWebUi/App_Code/MyEquiToolkit.cshtml
@@ -7,7 +7,7 @@
         {
             string urlSbcu = string.Format("http://equi/EqUi_UtilManager/EqUi_UtilManger.application?Tool=SBCUstats&target={0}", @Uri.EscapeDataString(gunname));
             <a href="@urlSbcu" data-toggle="tooltip" title="Data ivm SBCU midair lastang cilinder en dress">
-                <i class="glyphicon glyphicon-stats"></i>
+                <i class="fas fa-chart-line"></i>
             </a>
         }
         catch (Exception)
@@ -24,7 +24,7 @@
         {
             string urlSbcu = string.Format("http://equi/EqUi_UtilManager/EqUi_UtilManger.application?Tool=SBCUstats&Controller={0}&Toolid={1}", @Uri.EscapeDataString(controllername), toolId);
             <a href="@urlSbcu" data-toggle="tooltip" title="Data ivm SBCU midair lastang cilinder en dress">
-                <i class="glyphicon glyphicon-stats"></i>
+                <i class="fas fa-chart-line"></i>
             </a>
         }
         catch (Exception)
