--- a/EqUiWebUi/Areas/Gadata/Views/Table/_supervisie.cshtml
+++ b/EqUiWebUi/Areas/Gadata/Views/Table/_supervisie.cshtml
@@ -7,8 +7,8 @@
     columns.Add(c => c.RT).Titled("RT");
     columns.Add(c => c.DT).Titled("DT");
     columns.Add(c => c.time).Titled("time");
-    columns.Add(c => c.Classification).Titled("Class").Css("d-none d-sm-block");
-    columns.Add(c => c.Subgroup).Titled("Subgroup").Css("d-none d-sm-block");
+    columns.Add(c => c.Classification).Titled("Class").Css("xxd-none xxd-sm-block");
+    columns.Add(c => c.Subgroup).Titled("Subgroup").Css("xxd-none xxd-sm-block");
     columns.Add(c => c.Logtype).Titled("LogType").Css("hidden-sm hidden-xs").Filterable(true);
     columns.Add(c => c.LocationTree).Filterable(true).Css("d-none");
     columns.Add(c => c.Logcode).Css("d-none");
