--- a/EqUiWebUi/Areas/VASC/Views/c_controller/_List.cshtml
+++ b/EqUiWebUi/Areas/VASC/Views/c_controller/_List.cshtml
@@ -6,8 +6,8 @@
     columns.Add(c => c._Enable_bit).Titled("enable_bit");
     columns.Add(c => c.enable_bit).Titled("eb");
     columns.Add(c => c.controller_name).Titled("controller_name");
-    columns.Add(c => c.systemId).Titled("systemId").Css("d-none d-sm-block");
-    columns.Add(c => c.ip).Titled("ip").Css("d-none d-sm-block");
+    columns.Add(c => c.systemId).Titled("systemId").Css("xxd-none xxd-sm-block");
+    columns.Add(c => c.ip).Titled("ip").Css("xxd-none xxd-sm-block");
     columns.Add(c => c._ControllerFlags).Titled("flags");
     columns.Add(c => c)
                     .Titled("")
