--- a/EqUiWebUi/Areas/VASC/Views/c_csv_log/_List.cshtml
+++ b/EqUiWebUi/Areas/VASC/Views/c_csv_log/_List.cshtml
@@ -6,9 +6,9 @@
     columns.Add(c => c._Enable_bit).Titled("enable_bit");
     columns.Add(c => c.csv_filename).Titled("csv_filename");
     columns.Add(c => c.rt_table).Titled("rt_table");
-    columns.Add(c => c._Poll_Rate).Titled("Poll_Rate").Css("d-none d-sm-block");
-    columns.Add(c => c._Csv_log_Flags).Titled("flags").Css("d-none d-sm-block");
-    columns.Add(c => c.comment).Titled("comment").Css("d-none d-sm-block");
+    columns.Add(c => c._Poll_Rate).Titled("Poll_Rate").Css("xxd-none xxd-sm-block");
+    columns.Add(c => c._Csv_log_Flags).Titled("flags").Css("xxd-none xxd-sm-block");
+    columns.Add(c => c.comment).Titled("comment").Css("xxd-none xxd-sm-block");
     columns.Add(c => c)
                     .Titled("")
                     .Encoded(false)
