--- a/EqUiWebUi/Areas/Tiplife/Views/NgacElectrode/TipLifeExpectations.cshtml
+++ b/EqUiWebUi/Areas/Tiplife/Views/NgacElectrode/TipLifeExpectations.cshtml
@@ -16,12 +16,12 @@
             columns.Add(c => c.controller_name).Titled("Robot").Filterable(true);
             columns.Add(c => c.Tool_Nr).Titled("Nr");
             columns.Add(c => c.LastTipchange).Titled("LastTipchange").Formatted("{0:dd-MM-yyyy HH:mm}").InitialSort(GridSortOrder.Desc);
-            columns.Add(c => c.maxWearInCalc).Titled("maxWear").Css("d-none d-sm-block");
-            columns.Add(c => c.minWearInCalc).Titled("minWear").Css("d-none d-sm-block");
-            columns.Add(c => c.countWearInCalc).Titled("count").Css("d-none d-sm-block");
+            columns.Add(c => c.maxWearInCalc).Titled("maxWear").Css("xxd-none xxd-sm-block");
+            columns.Add(c => c.minWearInCalc).Titled("minWear").Css("xxd-none xxd-sm-block");
+            columns.Add(c => c.countWearInCalc).Titled("count").Css("xxd-none xxd-sm-block");
 
-            columns.Add(c => c.avgESTnSpotsFixedWearBefore100).Titled("SpotsFixedBefore100").Css("d-none d-sm-block");
-            columns.Add(c => c.avgESTnSpotsMoveWearBefore100).Titled("SpotsMoveBefore100").Css("d-none d-sm-block");
+            columns.Add(c => c.avgESTnSpotsFixedWearBefore100).Titled("SpotsFixedBefore100").Css("xxd-none xxd-sm-block");
+            columns.Add(c => c.avgESTnSpotsMoveWearBefore100).Titled("SpotsMoveBefore100").Css("xxd-none xxd-sm-block");
 
             columns.Add(c => c.avgPartsFixedBefore100).Titled("PartsFixedBefore100");
             columns.Add(c => c.avgPartsMoveBefore100).Titled("PartsMoveBefore100");
@@ -29,7 +29,7 @@
               .Encoded(false)
               .Filterable(false)
               .Sortable(false)
-              .RenderedAs(c => MyEquiToolkit.SbcuTool(c.controller_name, "1")).Css("d-none d-sm-block"); //need to add the toolnumber in die model
+              .RenderedAs(c => MyEquiToolkit.SbcuTool(c.controller_name, "1")).Css("xxd-none xxd-sm-block"); //need to add the toolnumber in die model
 }).Sortable().Filterable(true).Pageable(pager =>
 {
    pager.RowsPerPage = 20;
