--- a/EqUiWebUi/Areas/Tiplife/Views/NgacElectrode/TipwearBeforeChange.cshtml
+++ b/EqUiWebUi/Areas/Tiplife/Views/NgacElectrode/TipwearBeforeChange.cshtml
@@ -15,14 +15,14 @@
            {
                columns.Add(c => c.controller_name).Titled("Robot");
                columns.Add(c => c.TipchangeTimestamp).Titled("Tipchangetimestamp").Formatted("{0:dd-MM-yyyy HH:mm}").InitialSort(GridSortOrder.Desc);
-               columns.Add(c => c.WearBeforeChange).Titled("Wear (mm)").Css("d-none d-sm-block");
-               columns.Add(c => c.WeldsBeforeChange).Titled("#Welds").Css("d-none d-sm-block");
+               columns.Add(c => c.WearBeforeChange).Titled("Wear (mm)").Css("xxd-none xxd-sm-block");
+               columns.Add(c => c.WeldsBeforeChange).Titled("#Welds").Css("xxd-none xxd-sm-block");
                columns.Add(c => c.DressBeforeChange).Titled("#Dress");
                columns.Add(c => c.C_FixedWearBeforeChange).Titled("%Fixed");
                columns.Add(c => c.C_MoveWearBeforeChange).Titled("%Move");
                columns.Add(c => c.TipAge_h_).Titled("(h)leeftijd");
-               columns.Add(c => c.ESTnSpotsFixedWearBefore100).Titled("ESTnSFix100").Css("d-none d-sm-block");
-               columns.Add(c => c.ESTnSpotsMoveWearBefore100).Titled("ESTnSMov100").Css("d-none d-sm-block");
+               columns.Add(c => c.ESTnSpotsFixedWearBefore100).Titled("ESTnSFix100").Css("xxd-none xxd-sm-block");
+               columns.Add(c => c.ESTnSpotsMoveWearBefore100).Titled("ESTnSMov100").Css("xxd-none xxd-sm-block");
 
                columns.Add()
                  .Encoded(false)
