almost ready to push new layout

--- a/EqUiWebUi/Areas/Maximo_ui/Views/Workorder/Index.cshtml
+++ b/EqUiWebUi/Areas/Maximo_ui/Views/Workorder/Index.cshtml
@@ -16,8 +16,8 @@
         </p>
 
         <p>
-            <a href="~/Maximo_ui/Workorder/Workorders?location=53100R01" class="btn btn-primary btn-sm">WorkordersOnLocation &raquo;</a>
-            workorders on location init to 53110R01
+            <a href="~/Maximo_ui/Workorder/Workorders?location=53100R01&loadoninit=true" class="btn btn-primary btn-sm">WorkordersOnLocation &raquo;</a>
+            workorders on location init to 53110R01 and auto load
         </p>
 
         <p>
