--- a/EqUiWebUi/Views/Home/Index.cshtml
+++ b/EqUiWebUi/Views/Home/Index.cshtml
@@ -131,14 +131,16 @@
 
 <p></p>
 
+
+@*This card is default collapsed see fa-rotate-180 and display:none*@
 <div class="card">
     <div class="card-header bg-danger">
         <h5 class="card-title text-white">
             Beta
-            <span class="clickable float-right"><i class="fas fa-chevron-circle-up fa-1"></i></span>
+            <span class="clickable float-right"><i class="fas fa-chevron-circle-up fa-rotate-180 fa-1"></i></span>
         </h5>
     </div>
-    <div class="card-body">
+    <div class="card-body" style="display:none">
         <p>
             <a href="~/VASC/Breakdown/getBreakdowns" class="btn btn-primary btn-sm">NGAC breakdown&raquo;</a>(test)
             Test met niet gebufferde query
