--- a/EqUiWebUi/Areas/Maximo_ui/Views/Workorder/_workordersOnLocation.cshtml
+++ b/EqUiWebUi/Areas/Maximo_ui/Views/Workorder/_workordersOnLocation.cshtml
@@ -85,17 +85,17 @@
             reload: true, // Grid reload indicator
             rowClicked: function (row, data, e) {
                 //if row already has this clase close the modal
-                if ($(row).hasClass("info")) {
+                if ($(row).hasClass("bg-info")) {
                     $("#placeholder").remove();
-                    $(row).removeClass("info");
+                    $(row).removeClass("bg-info");
                     return;
                 }
                 //clear selected rows for this table
-                $('tr').removeClass('info'); //THIS IS WRONG
-                $(row).addClass("info");
+                $('tr').removeClass('bg-info'); //THIS IS WRONG
+                $(row).addClass("bg-info");
                 $("#placeholder").remove(); //clear placeholder is exists
                 //add new placeholder afhter selected row
-                $(row).after('<tr id="placeholder"><td colspan="10000"><div class="modal-content"><div class="modal-body" id ="placeholderPartial"></div></div></td></tr>');
+                $(row).after('<tr id="placeholder"><td colspan="10000"><div class=""><div class="" id ="placeholderPartial"></div></div></td></tr>');
                 //animation
                 $("#placeholderPartial").html("Loading.....");
                 //load url in placeholder
