--- a/EqUiWebUi/Areas/Maximo_ui/Views/Workorder/Workorders.cshtml
+++ b/EqUiWebUi/Areas/Maximo_ui/Views/Workorder/Workorders.cshtml
@@ -132,7 +132,7 @@
 
 <hr />
 @*only shown while loading*@
-<div id="loader" style="display:none;font-size:20px;font-weight:bold;color:#D3ACCC;">
+<div id="loader" class="alert alert-info">
     loading workorders....
 </div>
 @*table will be loaded in this*@
