--- a/EqUiWebUi/Areas/Alert/Views/Alert/Listalerts.cshtml
+++ b/EqUiWebUi/Areas/Alert/Views/Alert/Listalerts.cshtml
@@ -15,7 +15,7 @@
     columns.Add(c => c.location).Titled("location");
     columns.Add(c => c.alarmobject).Titled("alarmobject");
     columns.Add(c => c.Classification).Titled("Class");
-    columns.Add(c => c.info).Titled("info");
+    columns.Add(c => c.info).Titled("info").Css("d-none d-lg-block");
     columns.Add(c => c.ChangedUser.username.Replace(@"VCCNET\", "")).Titled("ChangedUser");
     columns.Add(c => c.triggerCount).Titled("TC");
     columns.Add(c => c.c_state.state).Titled("state");
