--- a/EqUiWebUi/Areas/Tiplife/Views/NgacElectrode/TipDressCycleTimeREMO.cshtml
+++ b/EqUiWebUi/Areas/Tiplife/Views/NgacElectrode/TipDressCycleTimeREMO.cshtml
@@ -15,7 +15,7 @@
              {
                  columns.Add(c => c.controller_name).Titled("Robot").Filterable(true);
                  columns.Add(c => c.Date_Time).Titled("Time_Robot").Formatted("{0:dd-MM-yyyy HH:mm}").InitialSort(GridSortOrder.Desc);
-                 columns.Add(c => c.C_timestamp).Titled("Time_db").Formatted("{0:dd-MM-yyyy HH:mm}").Css("xxd-none xxd-sm-block");
+                 columns.Add(c => c.C_timestamp).Titled("Time_db").Formatted("{0:dd-MM-yyyy HH:mm}").Css("XXd-none XXd-md-block");;
                  columns.Add(c => c.CT).Titled("CT(s)");
              }).Sortable().Filterable(true).Pageable(pager =>
     {
