--- a/EqUiWebUi/Areas/VASC/Views/c_controller_class/Index.cshtml
+++ b/EqUiWebUi/Areas/VASC/Views/c_controller_class/Index.cshtml
@@ -34,11 +34,11 @@
 {
     columns.Add(c => c.id).Titled("id").InitialSort(GridSortOrder.Asc);
     columns.Add(c => c.name).Titled("name");
-    columns.Add(c => c.cVariableMask).Titled("cVariableMask").Css("xxd-none xxd-sm-block");
-    columns.Add(c => c.cVariableSearchMask).Titled("cVariableSearchMask").Css("xxd-none xxd-sm-block");
-    columns.Add(c => c.cErrorMask).Titled("cErrorMask").Css("xxd-none xxd-sm-block");
-    columns.Add(c => c.cCSVLogMask).Titled("cCSVLogMask").Css("xxd-none xxd-sm-block");
-    columns.Add(c => c.cDeviceInfoMask).Titled("cDeviceInfoMask").Css("xxd-none xxd-sm-block");
+    columns.Add(c => c.cVariableMask).Titled("cVariableMask").Css("XXd-none XXd-md-block");;
+    columns.Add(c => c.cVariableSearchMask).Titled("cVariableSearchMask").Css("XXd-none XXd-md-block");;
+    columns.Add(c => c.cErrorMask).Titled("cErrorMask").Css("XXd-none XXd-md-block");;
+    columns.Add(c => c.cCSVLogMask).Titled("cCSVLogMask").Css("XXd-none XXd-md-block");;
+    columns.Add(c => c.cDeviceInfoMask).Titled("cDeviceInfoMask").Css("XXd-none XXd-md-block");;
     columns.Add(c => c)
                     .Titled("")
                     .Encoded(false)
