--- a/EqUiWebUi/Areas/VASC/Views/c_variable_search/_List.cshtml
+++ b/EqUiWebUi/Areas/VASC/Views/c_variable_search/_List.cshtml
@@ -5,11 +5,11 @@
     columns.Add(c => c.id).Titled("id").InitialSort(GridSortOrder.Asc);
     columns.Add(c => c._Enable_bit).Titled("enable_bit");
     columns.Add(c => c.variable).Titled("variable");
-    columns.Add(c => c._Poll_Rate).Titled("_Poll_Rate").Css("xxd-none xxd-sm-block");
-    columns.Add(c => c._Insert_update).Titled("_Insert_update").Css("xxd-none xxd-sm-block");
+    columns.Add(c => c._Poll_Rate).Titled("_Poll_Rate").Css("XXd-none XXd-md-block");;
+    columns.Add(c => c._Insert_update).Titled("_Insert_update").Css("XXd-none XXd-md-block");;
     columns.Add(c => c.rt_table).Titled("rt_table");
-    columns.Add(c => c._SymbolTypes).Titled("_SymbolTypes").Css("xxd-none xxd-sm-block"); //must check doc to make this enum
-    columns.Add(c => c.datatype).Titled("datatype").Css("xxd-none xxd-sm-block"); //idem
+    columns.Add(c => c._SymbolTypes).Titled("_SymbolTypes").Css("XXd-none XXd-md-block");; //must check doc to make this enum
+    columns.Add(c => c.datatype).Titled("datatype").Css("XXd-none XXd-md-block");; //idem
     columns.Add(c => c)
                     .Titled("")
                     .Encoded(false)
