--- a/EqUiWebUi/Areas/user_management/Views/c_ownership/Index.cshtml
+++ b/EqUiWebUi/Areas/user_management/Views/c_ownership/Index.cshtml
@@ -12,12 +12,12 @@
 
 @Html.Grid(Model).Named("c_ownership").Build(columns =>
     {
-        columns.Add(c => c.id).Titled("id").InitialSort(GridSortOrder.Asc).Css("xxd-none xxd-sm-block");
-        columns.Add(c => c.Plant).Titled("Plant").Css("xxd-none xxd-sm-block");
-        columns.Add(c => c.Optgroup).Titled("Optgroup").Css("xxd-none xxd-sm-block");
+        columns.Add(c => c.id).Titled("id").InitialSort(GridSortOrder.Asc).Css("XXd-none XXd-md-block");;
+        columns.Add(c => c.Plant).Titled("Plant").Css("XXd-none XXd-md-block");;
+        columns.Add(c => c.Optgroup).Titled("Optgroup").Css("XXd-none XXd-md-block");;
         columns.Add(c => c.Ownership).Titled("Ownership");
         columns.Add(c => c.LocationTree).Titled("LocationTree");
-        columns.Add(c => c.UserComment).Titled("UserComment").Css("xxd-none xxd-sm-block");
+        columns.Add(c => c.UserComment).Titled("UserComment").Css("XXd-none XXd-md-block");;
         columns.Add(c => c.id)
                     .Titled("")
                     .Encoded(false)
@@ -25,7 +25,7 @@
                                      @Html.ActionLink("Details", "Details", new { id = c.id }) + " | " +
                                      @Html.ActionLink("Delete", "Delete", new { id = c.id })
 
-                    ).InitialSort(GridSortOrder.Asc).Filterable(false).Css("xxd-none xxd-sm-block");
+                    ).InitialSort(GridSortOrder.Asc).Filterable(false).Css("XXd-none XXd-md-block");;
     }).Filterable(true).Sortable(true).Pageable(pager =>
     {
         pager.RowsPerPage = 15;
