--- a/EqUiWebUi/Areas/Gadata/Views/Table/SupervisieWebgrid.cshtml
+++ b/EqUiWebUi/Areas/Gadata/Views/Table/SupervisieWebgrid.cshtml
@@ -11,7 +11,7 @@
 
 @*render popuover modal*@
 <div id="MyModal" class="modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-    <div class="modal-content">Loading....</div>
+    <div class='card-body'><i class='fa fa-spinner fa-pulse fa-4x fa-fw text-white'></i><span class='sr-only'>Loading...</span></div>
 </div>
 
 
@@ -33,8 +33,7 @@
                 //launch modal
                 $('#MyModal').removeData('bs.modal');
                 $('#MyModal').modal({ show: true });
-                $('#MyModal').load(urlMoreInfo, function (result) {
-                });
+                $('#MyModal').load(urlMoreInfo, function (result) {});
         },
         reloadStarted: function () {
             SupervisieGridspinner.spin(document.getElementById('SupervisieGridSpincontainer'));
@@ -43,6 +42,7 @@
             SupervisieGridspinner.stop();
         },
         reloadFailed: function (result) {
+            console.log(result);
             SupervisieGridspinner.stop();
             $("#SupervisieGrid").html("<div class='alert alert-danger'>Error while loading!! </div>");
         }
@@ -50,7 +50,7 @@
 
         //on modal close
         $('#MyModal').on('hidden.bs.modal', function (e) {
-            $('#MyModal').html('<div class="modal-content">no content</div>');
+            $('#MyModal').html("<div class='card-body'><i class='fa fa-spinner fa-pulse fa-4x fa-fw text-white' ></i ><span class='sr-only'>Loading...</span></div >");
         });
 
         //full with screen
